--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -4,9 +4,9 @@ block content
   table.table.table-striped
     thead
       tr
-        th= getText('users.fullName')
-        th= getText('users.email')
-        th= getText('users.createdAt')
+        th= t('users.fullName')
+        th= t('users.email')
+        th= t('users.createdAt')
     tbody
       each user in users
         tr
