--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -26,7 +26,8 @@ html(lang="en")
             li.nav-item
               a.nav-link(href=route('newUser'))= t('controls.signUp')
     .container
-      - const isFlash = _.get(flash, 'info', false);
-      if isFlash
-        .alert.alert-info.m-3= flash.info.join(' ')
+      - console.log(this.reply.flash);
+      // - const isFlash = _.get(flash, 'info', false);
+      // if isFlash
+      //   .alert.alert-info.m-3= flash.info.join(' ')
       block content
