--- a/server/views/welcome/index.pug
+++ b/server/views/welcome/index.pug
@@ -1,4 +1,8 @@
 extends ../layouts/application.pug
 
 block content
-  // h3= getText('content.welcome')
+  .jumbotron
+    .display-4= t('views.welcome.index.hello')
+    p.lead= t('views.welcome.index.description')
+    hr
+    a.btn.btn-primary.btn-lg(href="https://hexlet.io")= t('views.welcome.index.more')
