--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -1,10 +1,8 @@
 extends ../layouts/application.pug
 
 block content
-  form(action=route('users')  method='post')
-    +input('email', 'text', t('forms.email'), t('forms.email'))
-    +input('firstName', 'text', t('forms.firstName'), t('forms.firstName'))
-    +input('lastName', 'text', t('forms.lastName'), t('forms.lastName'))
-    +input('password', 'password', t('forms.password'), t('forms.password'))
-    .form-group
-      input.btn.btn-primary(type='submit' value=t('controls.signUp'))
+  +formFor()(action=route('users') method='post')
+    +input(user, 'email')()
+    +input(user, 'firstName')()
+    +input(user, 'lastName')()
+    +submit()
