--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -1,10 +1,10 @@
 extends ../layouts/application.pug
 
 block header
-  | Sign Up
+  = t('views.users.new.signUp')
 
 block content
   +formFor()(action=route('users') method='post')
     +input(user, 'email', errors)(type="text")
     +input(user, 'password', errors)(type="password")
-    +submit()
+    +submit(user)(value=t('views.users.new.submit'))
