add firstName, lastName fields

--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -5,11 +5,15 @@ block content
     thead
       tr
         th= t('views.users.id')
+        th= t('views.users.firstName')
+        th= t('views.users.lastName')
         th= t('views.users.email')
         th= t('views.users.createdAt')
     tbody
       each user in users
         tr
           td= user.id
+          td= user.firstName
+          td= user.lastName
           td= user.email
           td= formatDate(user.createdAt)
