--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -4,16 +4,18 @@ block content
   table.table.table-striped
     thead
       tr
-        th= t('views.users.id')
-        th= t('views.users.firstName')
-        th= t('views.users.lastName')
-        th= t('views.users.email')
-        th= t('views.users.createdAt')
+        th=t('views.users.id')
+        th=t('views.users.fullName')
+        th=t('views.users.email')
+        th=t('views.users.createdAt')
+        th
     tbody
       each user in users
         tr
-          td= user.id
-          td= user.firstName
-          td= user.lastName
-          td= user.email
-          td= formatDate(user.createdAt)
+          td=user.id
+          td=user.fullName
+          td=user.email
+          td=formatDate(user.createdAt)
+          td
+            a(href=`/users/${user.id}/edit`)=t('views.users.update.submit')
+            +buttonTo(`/users/${user.id}`, 'delete')(class='btn btn-link', value=t('views.users.delete.submit'))
