add task crud, refactor labels, statuses

--- a/server/views/labels/new.pug
+++ b/server/views/labels/new.pug
@@ -5,5 +5,5 @@ block header
 
 block content
   +formFor()(action=route('labels') method='post')
-    +input(label, 'name', errors)(type="text")
+    +input(label, 'name', errors)(type="text", autofocus)
     +submit(label)(value=t('views.labels.new.submit'))
