--- a/server/views/statuses/new.pug
+++ b/server/views/statuses/new.pug
@@ -5,5 +5,5 @@ block header
 
 block content
   +formFor()(action=route('statuses') method='post')
-    +input(status, 'name', errors)(type="text")
+    +input(status, 'name', errors)(type="text", autofocus)
     +submit(status)(value=t('views.statuses.new.submit'))
