--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -15,12 +15,13 @@ html(lang="en").h-100
         ul.navbar-nav.mr-auto
           li.nav-item
             a.nav-link(href=route('users'))= t('layouts.application.users')
-          li.nav-item
-            a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
-          li.nav-item
-            a.nav-link(href=route('labels'))= t('layouts.application.labels')
-          li.nav-item
-            a.nav-link(href=route('tasks'))= t('layouts.application.tasks')
+          if reply.request.signedIn
+            li.nav-item
+              a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
+            li.nav-item
+              a.nav-link(href=route('labels'))= t('layouts.application.labels')
+            li.nav-item
+              a.nav-link(href=route('tasks'))= t('layouts.application.tasks')
         ul.navbar-nav
           if reply.request.signedIn
             li.nav-item
