--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -1,7 +1,9 @@
 extends ../layouts/application.pug
 
 block content
-  a(class='nav-link' href=route('newTask'))= t('views.tasks.new.create')
+  a(class='nav-link' href=route('tasks#new'))= t('views.tasks.new.create')
+  .jumbotron.p-2
+    +formFor()(form.inline)
   table.table.table-striped
     thead
       tr
@@ -17,11 +19,11 @@ block content
         tr
           td=task.id
           td
-            a(href=`/tasks/${task.id}`)=task.name
+            a(href=route('tasks#show', { id: task.id }))=task.name
           td=task.statuses.name
           td=task.authors.fullName
           td=task.executors.fullName
           td=formatDate(task.createdAt)
           td
-            a(href=`/tasks/${task.id}/edit`)=t('views.tasks.update.submit')
-            +buttonTo(`/tasks/${task.id}`, 'delete')(class='btn btn-link', value=t('views.tasks.delete.submit'))
+            a(href=route('tasks#edit', { id: task.id }))=t('views.tasks.update.submit')
+            +buttonTo(route('tasks#destroy', { id: task.id }), 'delete')(class='btn btn-link', value=t('views.tasks.delete.submit'))
