--- a/server/views/labels/edit.pug
+++ b/server/views/labels/edit.pug
@@ -4,7 +4,7 @@ block header
   = t('views.labels.update.title')
 
 block content
-  +formFor()(action=`/labels/${label.id}` method='post')
+  +formFor()(action=route('labels#update', { id: label.id }) method='post')
     +input(label, 'name', errors)(type="text")
     input(name='_method', type='hidden' value='patch')
     +submit(label)(value=t('views.labels.update.submit'))
