--- a/server/views/labels/new.pug
+++ b/server/views/labels/new.pug
@@ -4,6 +4,6 @@ block header
   = t('views.labels.new.title')
 
 block content
-  +formFor()(action=route('labels') method='post')
+  +formFor()(action=route('labels#create') method='post')
     +input(label, 'name', errors)(type="text", autofocus)
     +submit(label)(value=t('views.labels.new.submit'))
