--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -19,7 +19,7 @@ html(lang="en").h-100
             li.nav-item
               a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
             li.nav-item
-              a.nav-link(href=route('labels'))= t('layouts.application.labels')
+              a.nav-link(href=route('labels#index'))= t('layouts.application.labels')
             li.nav-item
               a.nav-link(href=route('tasks#index'))= t('layouts.application.tasks')
         ul.navbar-nav
