--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -4,7 +4,7 @@ block header
   = t('views.session.new.signIn')
 
 block content
-  +formFor()(action=route('session') method='post')
+  +formFor()(action=route('session#create') method='post')
     +input(signInForm, 'email')(type="text")
     +input(signInForm, 'password')(type="password")
     +submit(signInForm)(value=t('views.session.new.submit'))
