rename authorId to creatorId, add interface texts

--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -15,7 +15,7 @@ block content
         th=t('views.tasks.id')
         th=t('views.tasks.name')
         th=t('views.tasks.statuses')
-        th=t('views.tasks.authors')
+        th=t('views.tasks.creators')
         th=t('views.tasks.executors')
         th=t('views.tasks.createdAt')
         th
@@ -26,7 +26,7 @@ block content
           td
             a(href=route('tasks#show', { id: task.id }))=task.name
           td=task.statuses.name
-          td=task.authors.fullName
+          td=task.creators.fullName
           td=task.executors.fullName
           td=formatDate(task.createdAt)
           td
