--- a/server/views/tasks/show.pug
+++ b/server/views/tasks/show.pug
@@ -8,7 +8,7 @@ block content
     .container
       .row.p-1
         .col Автор
-        .col  #{task.authors.fullName}
+        .col  #{task.creators.fullName}
       .row.p-1
         .col Исполнитeль
         .col #{task.executors.fullName}
